--- a/index.html
+++ b/index.html
@@ -40,31 +40,31 @@
                     </div>
                     <div class="about-col-2">
                         <h1 class="sub-title">About Me</h1>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                        <p>Passionate and driven final-year Computer Science Engineering student specializing in Big Data and Analytics. Proficient in C++, MySQL, and Web Development (HTML, CSS, JavaScript). Seeking an internship opportunity to apply and enhance my skills in a practical work environment. Experienced in building projects utilizing these technologies, showcasing my ability to translate theory into tangible solutions. Eager to contribute to a dynamic organization, collaborate with industry professionals, and make a meaningful impact. Adaptable, with strong project management and problem-solving skills. Ready to learn from experienced mentors and drive innovation. Let's connect and explore possibilities for growth and collaboration.</p>
                         <div class="tab-titles">
                             <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
-                            <p class="tab-links" onclick="opentab('experience')">Experience</p>
+                            <p class="tab-links" onclick="opentab('experience')">Hobbies</p>
                             <p class="tab-links" onclick="opentab('education')">Education</p>
                         </div>
                         <div class="tab-contents active-tab" id="skills">
                             <ul>
-                                <li><span>UI/UX</span><br>Designing Web/App Interfaces</li>
-                                <li><span>Web Development</span><br>Designing Web/App Interfaces</li>
-                                <li><span>App Development</span><br>Designing Web/App Interfaces</li>
+                                <li><span>C/C++</span><br>Knowledge about Data Structures and Algorithm</li>
+                                <li><span>MySQL</span><br>Managing Databases efficiently</li>
+                                <li><span>Web Development</span><br>Designing Web Interfaces</li>
                             </ul>
                         </div>
                         <div class="tab-contents" id="experience">
                             <ul>
-                                <li><span>2020</span><br>COVID-19</li>
-                                <li><span>2021</span><br>Online Classes</li>
-                                <li><span>2022</span><br>CU Mess Food</li>
+                                <li><span>F1</span><br>I love watching thrilling F1 races</li>
+                                <li><span>Sports</span><br>I like to play Cricket, Football, Basketball and other sports too</li>
+                                <li><span>E-Sports</span><br>I play and compete in Valorant Tournaments</li>
                             </ul>
                         </div>
                         <div class="tab-contents" id="education">
                             <ul>
-                                <li><span>Graduation</span><br>Btech CSE</li>
-                                <li><span>12th</span><br>PCM</li>
-                                <li><span>10th</span><br>PCME-CS</li>
+                                <li><span>Graduation</span><br>Chandigarh University<br>B.E. CSE with specialization in Big Data and Analytics</li>
+                                <li><span>12th</span><br>Gujarat Public School<br>PCM (CBSE Board)</li>
+                                <li><span>10th</span><br>Gujarat Public School<br>PCME-CS (CBSE Board)</li>
                             </ul>
                         </div>
                     </div>
@@ -74,24 +74,24 @@
 <!--------Services---------->  
         <div id="services">
             <div class="container">
-                <h1 class="sub-title">My Services</h1>
+                <h1 class="sub-title">My Skills</h1>
                 <div class="services-list">
                     <div>
                         <i class="fa-solid fa-code"></i>
-                        <h2>UI/UX Design</h2>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        <h2>C/C++</h2>
+                        <p>I'm Proficient in C++ and use it to solve problems on various online platforms including Leetcode, GeeksforGeeks practice and many more. I have studied Data Structures and Algorithms in C++ as it provides us with OOPs functionalities.</p>
                         <a href="#">Learn more</a>
                     </div>
                     <div>
                         <i class="fa-solid fa-crop-simple"></i>
-                        <h2>Web Design</h2>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        <h2>Web Development</h2>
+                        <p>I have constructed several web development projects, including this personal portfolio website, where I utilized HTML, CSS, and JS to create practical applications in real-world scenarios.</p>
                         <a href="#">Learn more</a>
                     </div>
                     <div>
-                        <i class="fa-brands fa-app-store"></i>
-                        <h2>App Design</h2>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                        <i class="fa-solid fa-database"></i>
+                        <h2>MySQL</h2>
+                        <p>I possess a strong command of MySQL as I have utilized it to establish connections with databases and effectively maintain them for my projects.</p>
                         <a href="#">Learn more</a>
                     </div>
                 </div>
