--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="header">
             <div class="container">
                 <nav>
-                    <img src="images/logo 2.png" class="logo">
+                    <img src="images/logo2.png" class="logo">
                     <ul id="sidemenu">
                         <li> <a href="#header">Home</a></li>
                         <li> <a href="#about">About</a></li>
@@ -106,7 +106,7 @@
                         <img src="images/work-1.jpg">
                         <div class="layer">
                             <h3>Spotify Playlist Recommendation System</h3>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <p>System that recommends songs on the basis of a playlist curated by the user.</p>
                             <a href="https://github.com/Dhvaniish/Spotify-Playlist-Recommendation-System"><i class="fa-solid fa-square-arrow-up-right"></i></a>
                         </div>
                     </div>
@@ -114,20 +114,20 @@
                         <img src="images/work-2.jpg">
                         <div class="layer">
                             <h3>Sentiment Analysis on Customer Feedback</h3>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <p>Program to analyze the sentiment of text in a given review for a product and generates a corresponding report.</p>
                             <a href="https://github.com/Dhvaniish/Sentiment-Analysis-on-Customer-Feedback"><i class="fa-solid fa-square-arrow-up-right"></i></a>
                         </div>
                     </div>
                     <div class="work">
-                        <img src="images/pg.jpg">
+                        <img src="images/olympics.png">
                         <div class="layer">
-                            <h3>PGLife</h3>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                            <a href="https://github.com/Dhvaniish/PGLife"><i class="fa-solid fa-square-arrow-up-right"></i></a>
+                            <h3>Olympics Data Analysis</h3>
+                            <p>Performed comprehensive analysis of 120 years of Olympic history, extracting and analyzing athletes' basic bio data and medal results from Athens 1896 to Rio 2016</p>
+                            <a href="https://github.com/Dhvaniish/Olympics-Data-Analysis"><i class="fa-solid fa-square-arrow-up-right"></i></a>
                         </div>
                     </div>
                 </div>
-                <a href="https://github.com/Dhvaniish" class="btn">See more</a>
+                <a href="https://github.com/Dhvaniish?tab=repositories" class="btn">See more</a>
             </div>
         </div>
 <!--------Contact-Me---------->
@@ -136,15 +136,15 @@
                 <div class="row">
                     <div class="contact-left">
                         <h1 class="sub-title">Contact Me</h1>
-                        <p><i class="fa-solid fa-paper-plane"></i>contact@example.com</p>
-                        <p><i class="fa-solid fa-phone"></i>+91 1234567890</p>
+                        <p><i class="fa-solid fa-paper-plane"></i>dhvanishsamanta@gmail.com</p>
+                        <p><i class="fa-solid fa-phone"></i>+91 99242 27939</p>
                         <div class="social-icons">
                             <a href="#"><i class="fa-brands fa-facebook"></i></a>
                             <a href="#"><i class="fa-brands fa-twitter"></i></a>
                             <a href="#"><i class="fa-brands fa-instagram"></i></i></a>
                             <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
                         </div>
-                        <a href="images/Demo CV File.pdf" download class="btn btn2">Download CV</a>
+                        <a href="images/Dhvanish_Resume" download class="btn btn2">Download CV</a>
                     </div>
                     <div class="contact-right">
                         <form name="submit-to-google-sheet">
