--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <ul id="sidemenu">
                         <li> <a href="#header">Home</a></li>
                         <li> <a href="#about">About</a></li>
-                        <li> <a href="#services">Services</a></li>
+                        <li> <a href="#services">My Skills</a></li>
                         <li> <a href="#portfolio">Portfolio</a></li>
                         <li> <a href="#contact">Contact</a></li>
                         <i class="fa-solid fa-times" onclick="closemenu()"></i>
@@ -26,7 +26,7 @@
                     <i class="fa-solid fa-bars" onclick="openmenu()"></i>
                 </nav>
                 <div class="header-text">
-                    <p>Hello World</p>
+                    <h2>Hello World</h2>
                     <h1>Hi, I'm <span>Dhvanish</span><br>Samanta.</h1>
                 </div>
             </div>
