--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Personal Portfolio</title>
+        <!-- <link rel="icon" type="image/x-icon" href="/images/icons8-home"> -->
         <link rel ="stylesheet" href="style.css">
         <script src="https://kit.fontawesome.com/37f44dda3d.js" crossorigin="anonymous"></script>
     </head>
@@ -139,12 +140,12 @@
                         <p><i class="fa-solid fa-paper-plane"></i>dhvanishsamanta@gmail.com</p>
                         <p><i class="fa-solid fa-phone"></i>+91 99242 27939</p>
                         <div class="social-icons">
-                            <a href="#"><i class="fa-brands fa-facebook"></i></a>
-                            <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                            <a href="#"><i class="fa-brands fa-instagram"></i></i></a>
-                            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                            <a href="https://www.facebook.com/dhvanish.samanta/"><i class="fa-brands fa-facebook"></i></a>
+                            <a href="https://twitter.com/Dhvanish23"><i class="fa-brands fa-twitter"></i></a>
+                            <a href="https://instagram.com/dhvaniish?igshid=MzRlODBiNWFlZA=="><i class="fa-brands fa-instagram"></i></i></a>
+                            <a href="https://www.linkedin.com/in/dhvanishsamanta/"><i class="fa-brands fa-linkedin-in"></i></a>
                         </div>
-                        <a href="images/Dhvanish_Resume" download class="btn btn2">Download CV</a>
+                        <a href="images/Dhvanish_Samanta_Resume" download class="btn btn2">Download CV</a>
                     </div>
                     <div class="contact-right">
                         <form name="submit-to-google-sheet">
