--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <title>Personal Portfolio</title>
         <!-- <link rel="icon" type="image/x-icon" href="/images/icons8-home"> -->
         <link rel ="stylesheet" href="style.css">
+        <script defer src="index.js"></script>
         <script src="https://kit.fontawesome.com/37f44dda3d.js" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -21,15 +22,23 @@
                         <li> <a href="#about">About</a></li>
                         <li> <a href="#services">My Skills</a></li>
                         <li> <a href="#portfolio">Portfolio</a></li>
-                        <li> <a href="#contact">Contact</a></li>
+                        <li> <a href="#contact">Contact </a></li>
                         <i class="fa-solid fa-times" onclick="closemenu()"></i>
+                        
                     </ul>
                     <i class="fa-solid fa-bars" onclick="openmenu()"></i>
+                        <!-- <div><i class="fa-solid fa-eye fa-fade"></i></div> -->
+                        <!-- <div class="website-counter"></div> -->
+                    
                 </nav>
                 <div class="header-text">
+                    <div class="flex-parent-element">
+                        <div><i class="flex-child-element fa-solid fa-eye fa-fade"></i></div>
+                        <div class="flex-child-element website-counter"></div>
+                    </div>
                     <h2>Hello World</h2>
                     <h1>Hi, I'm <span>Dhvanish</span><br>Samanta.</h1>
-                </div>
+                </div>  
             </div>
         </div>
 <!--------About-Me---------->        
